[package]
name = "subfinder-rs"
version = "0.1.0"
edition = "2021"
authors = ["Cline"]
description = "A subdomain discovery tool written in Rust"

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls", "cookies"] }
tokio = { version = "1.0", features = ["full", "macros"] }
clap = { version = "4.4", features = ["derive", "env"] }
anyhow = "1.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
log = { version = "0.4", features = ["std"] }
colored = "2.1"
env_logger = "0.10"
url = "2.4"
trust-dns-resolver = "0.22"
scraper = "0.17"
regex = "1.10"
rand = "0.8"
chrono = "0.4"
urlencoding = "2.1"

[build-dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
